# flet-mistral-chat

./: .gitignore  AGENTS.md  README.md  demo.py  main.py  pyproject.toml
screens/: __init__.py  chat_screen.py  provider_screen.py
services/: __init__.py  mistral_api.py  provider_manager.py
tests/: test_mistral_api.py  test_provider_manager.py  test_provider_screen.py
