[project]
name = "flet-controls-showcase"
version = "0.1.0"
description = "A Flet controls showcase and testing application"
authors = [{name = "Developer", email = "dev@example.com"}]
dependencies = [
    "flet[all]==0.80.0",
]
requires-python = ">=3.12"

[dependency-groups]
dev = [
    "ruff>=0.7.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "N", "UP", "B", "C4", "SIM", "RUF"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
